Added mailto in contact me anchor tag

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p class="contact-message">Love game design as much as I do? let's exchange some ideas for the next big hit!
             We can code while we discuss the possibilites.
           </p>
-          <a class="btn" href="tukanderson@gmail.com">CONTACT ME</a>
+          <a class="btn" href="mailto:tukanderson@gmail.com">CONTACT ME</a>
         </div>
       </div>
       
