--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="middle-container">
         <div class="profile">
-          <img class="business-man" src="images/BusinessMan.png" alt="pixel-me">
+          <img class="business-man" src="images/ReeM.png" alt="pixel-me">
           <h2>Hello.</h2>
           <p class="intro">I became interested in game development thanks to a game called Trials Evolution. I used the games editor to create
              and publish many challenging levels which were well received by the Trials community.</p>
